# cli

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bot  LICENSE  Makefile  README.md  agents.sh  binance_exchange.py  build.rs  config.toml  flake.nix  fn.tsx  go.mod  go.sum  hello.sh  hello.ts  install.sh  main.go  main.py  package-lock.json  package.json  pnpm-lock.yaml  pull.ts  railway.plugin.zsh  railway.toml  release.toml  requirements.txt  shell.nix  telegram_reporter.py  template-search-command-plan.md  test.json  trading_bot.py  uninstall.sh  v2.sh
.cargo/: audit.toml  config  config.toml
.github/: changelog-configuration.json
.github/workflows/: auto-release.yml  build.yml  cargo-audit.yml  cargo-release.yml  ci.yml  create-release-pr.yml  create-release.yml  create_release.yml  docker-publish.yml  homebrew.yml  label-check  label-check.yml  poc.yml  publish-cargo.yml  publish-docker.yml  publish-npm.yml  publish.yml  release-dispatch.yml  release-pr.yml  release.yml  tag.yml  test.yml
assets/iac/: README.md
assets/railway-config/: README.md  SKILL.md
cmd/: add.go  build.go  completion.go  config.go  connect.go  delete.go  design.go  disconnect.go  docs.go  down.go  env.go  environment.go  errors.go  init.go  link.go  list.go  login.go  logout.go  logs.go  main.go  open.go  panic.go  protect.go  run.go  shell.go  status.go  template.go  unlink.go  up.go  upgrade.go  use.go  variables.go  version.go  whoami.go
common/configs/: envcache.go
configs/: main.go  project.go  root.go  user.go
constants/: docs.go  open.go  url.go  version.go
controller/: config.go  deployment.go  deployment_trigger.go  down.go  environment.go  envs.go  github.go  logs.go  main.go  open.go  panic.go  plugin.go  project.go  scope.go  starter.go  telemetry.go  up.go  user.go  version.go  workflow.go
docs/proposals/: agent-unknown-terminal-detection.md
entity/: cobra.go  config.go  deployment.go  deployment_trigger.go  down.go  environment.go  envs.go  github.go  handler.go  panic.go  plugin.go  project.go  requests.go  root.go  service.go  starter.go  template.go  up.go  user.go  workflow.go
errors/: main.go
gateway/: deployment.go  deployment_trigger.go  down.go  envcache.go  environment.go  envs.go  gitignore.go  logs.go  main.go  open.go  panic.go  plugin.go  project.go  scope.go  starter.go  telemetry.go  up.go  user.go  workflow.go
gateway/github/: main.go  repos.go
gateway/railway/: envs.go  main.go  project.go  user.go
lib/git/: git.go  metadata.go
lib/gql/: gql.go
npm/: .gitignore
npm-install/: config.js  postinstall.js
q/: Cargo.toml  Dockerfile
random/: main.go
scripts/: diagnose-caller.sh
src/: client.rs  config.rs  consts.rs  entities.rs  errors.rs  exec_context.rs  macros.rs  main.rs  oauth.rs  resources.rs  subscription.rs  table.rs  telemetry.rs  tokio_spawner.rs  workspace.rs
src/commands/: add.rs  agent.rs  api.rs  autoupdate.rs  backup.rs  bucket.rs  cdn.rs  changes.rs  check_updates.rs  code.rs  completion.rs  config.rs  config_command.rs  connect.rs  create.rs  create_custom_domain.rs  custom_domain.rs  dash.rs  delete.rs  deploy.rs  deployment.rs  dev.rs  develop.rs  docs.rs  domain.rs  domains.rs  down.rs  environment.rs  flag.rs  functions.rs  iac_runner.rs  init.rs  link.rs  list.rs  login.rs  logout.rs  logs.rs  metrics.rs  mod.rs  open.rs  (+31 more)
src/commands/config/: mod.rs  runner.rs
src/commands/environment/: config.rs  delete.rs  edit.rs  link.rs  list.rs  mod.rs  new.rs
src/commands/environment/changes/: build_command.rs  builder.rs  commands.rs  healthcheck.rs  mod.rs  regions.rs  restart_policy.rs  source.rs  start_command.rs  variable.rs  watch_patterns.rs
src/commands/functions/: common.rs  delete.rs  link.rs  list.rs  mod.rs  new.rs  pull.rs  push.rs
src/commands/mcp/: handler.rs  install.rs  mod.rs  params.rs
src/commands/mcp/tools/: docs.rs  mod.rs  observability.rs  private_network.rs  project.rs  service.rs  staged_changes.rs  storage.rs  tcp_proxy.rs
src/commands/output/: fields.rs  mod.rs  service_summary.rs
src/commands/ssh/: common.rs  config.rs  keys.rs  mod.rs  native.rs  tel.rs
src/commands/ssh/platform/: mod.rs  unix.rs  (+1 more)
src/commands/volume/: files.rs  sftp.rs  ssh_agent.rs  ssh_key.rs
src/controllers/: chat.rs  database.rs  deployment.rs  develop_lock.rs  environment.rs  environment_config.rs  github.rs  local_dev_config.rs  local_https.rs  local_override.rs  metrics.rs  mod.rs  outbound_networking.rs  plugin.rs  private_network.rs  process_manager.rs  project.rs  regions.rs  sandbox_exec.rs  service.rs  signals.rs  ssh_keys.rs  staged_changes.rs  tcp_proxy.rs  terminal.rs  upload.rs  user.rs  variables.rs  volume_files.rs  workflow.rs
src/controllers/config/: environment.rs  mod.rs  patch.rs
src/controllers/dash_tui/: data.rs  logs.rs  mod.rs  project.rs  service.rs  ui.rs
src/controllers/db_stats/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  types.rs
src/controllers/develop/: code_runner.rs  compose.rs  https_proxy.rs  local_config.rs  mod.rs  output.rs  ports.rs  session.rs  traits.rs  variables.rs
src/controllers/metrics/: mod.rs
src/controllers/metrics_tui/: app.rs  mod.rs  ui.rs
src/controllers/scale_tui/: app.rs  mod.rs  ui.rs
src/controllers/ssh/: authentication.rs  keys.rs  mod.rs
src/controllers/terminal/: client.rs  connection.rs  messages.rs  mod.rs
src/controllers/volume_browser/: app.rs  cache.rs  mod.rs  ui.rs
src/gql/: mod.rs  schema.graphql  schema.json
src/gql/mutations/: mod.rs
src/gql/queries/: mod.rs
src/gql/signals/: mod.rs  schema.graphql
src/gql/subscriptions/: mod.rs
src/util/: agent_advisory.rs  check_update.rs  compare_semver.rs  detect.rs  editor.rs  git.rs  install_method.rs  logs.rs  mod.rs  progress.rs  prompt.rs  reporter.rs  retry.rs  self_update.rs  shell.rs  time.rs  two_factor.rs  watcher.rs
test/: README.md  index.ts  package.json
ui/: prompt.go  spinner.go  text.go  text_test.go  tty.go
uuid/: main.go
wix/: License.rtf  main.wxs
(+170 files in other folders)
