[package]
name = "railwayapp"
version = "4.11.0"
edition = "2024"
license = "MIT"
authors = ["Railway <contact@railway.com>"]
description = "Interact with Railway via CLI"
readme = "README.md"
homepage = "https://github.com/railwayapp/cli"
repository = "https://github.com/railwayapp/cli"
rust-version = "1.85.0"
default-run = "railway"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "railway"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "suggestions", "cargo"] }
colored = "2.2.0"
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
chrono = { version = "0.4.39", features = [
  "serde",
  "clock",
], default-features = false }
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
tokio = { version = "1.42.0", features = ["full"] }
clap_complete = "4.5.40"
open = "5.3.1"
inquire = "0.7.5"
hyper = { version = "1.5.2", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
base64 = "0.22.1"
http-body-util = "0.1.2"
rand = "0.8.5"
hostname = "0.4.0"
indicatif = "0.17.9"
indoc = "2.0.5"
console = "0.15.10"
box_drawing = "0.1.2"
textwrap = "0.16.1"
gzp = { version = "0.11.3", default-features = false, features = [
  "deflate_rust",
] }
tar = "0.4.43"
synchronized-writer = "1.1.11"
ignore = "0.4.23"
num_cpus = "1.16.0"
url = "2.5.4"
futures = { version = "0.3.31", default-features = false, features = [
  "compat",
  "io-compat",
  "executor"
] }
futures-util = "0.3"
graphql-ws-client = { version = "0.11.1", features = [
  "client-graphql-client",
  "tungstenite",
] }
async-tungstenite = { version = "0.28.2", features = [
  "tokio-runtime",
  "tokio-rustls-native-certs",
] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
http = "0.2"
is-terminal = "0.4.13"
serde_with = "3.12.0"
ctrlc = "3.4.5"
which = "7.0.1"
thiserror = "2.0.9"
winapi = { version = "0.3.9", features = [
  "minwindef",
  "tlhelp32",
  "processthreadsapi",
  "handleapi",
  "winerror",
] }
strum = { version = "0.26.3", features = ["derive"] }
structstruck = "0.4.1"
derive-new = "0.7.0"
struct-field-names-as-array = "0.3.0"
json_dotpath = "1.1.0"
country-emoji = "0.2.0"
chrono-humanize = "0.2.3"
notify = "8.0.0"
cron-descriptor = "0.1.1"
croner = "2.1.0"
tokio-util = "0.7.15"
similar = "2.7.0"
pathdiff = "0.2.3"
pastey = "0.1.1"

[profile.release]
lto = "fat"
opt-level = "z"
panic = "abort"
