[package]
name = "railwayapp"
version = "4.36.1"
edition = "2024"
license = "MIT"
authors = ["Railway <contact@railway.com>"]
description = "Interact with Railway via CLI"
readme = "README.md"
homepage = "https://github.com/railwayapp/cli"
repository = "https://github.com/railwayapp/cli"
rust-version = "1.85.0"
default-run = "railway"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "railway"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
arboard = "3"
clap = { version = "4.5.23", features = ["derive", "suggestions", "cargo"] }
colored = "2.2.0"
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
] }
reqwest-websocket = "0.5.1"
chrono = { version = "0.4.39", features = [
  "serde",
  "clock",
], default-features = false }
graphql_client = "0.14.0"
tokio = { version = "1.48.0", features = ["full"] }
clap_complete = "4.5.40"
open = "5.3.1"
inquire = "0.9.1"
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10"
indicatif = "0.18.3"
indoc = "2.0.5"
console = "0.15.10"
box_drawing = "0.1.2"
textwrap = "0.16.1"
gzp = { version = "0.11.3", default-features = false, features = [
  "deflate_rust",
] }
tar = "0.4.43"
synchronized-writer = "1.1.11"
ignore = "0.4.23"
num_cpus = "1.16.0"
url = "2.5.4"
futures = { version = "0.3.31", default-features = false, features = [
  "compat",
  "io-compat",
  "executor"
] }
futures-util = "0.3"
graphql-ws-client = { version = "0.11.1", features = ["client-graphql-client"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
http = "0.2"
is-terminal = "0.4.13"
serde_with = { version = "3.17.0", default-features = false, features = ["macros"] }
ctrlc = "3.4.5"
which = "7.0.1"
thiserror = "2.0.9"
winapi = { version = "0.3.9", features = [
  "minwindef",
  "tlhelp32",
  "processthreadsapi",
  "handleapi",
  "winerror",
] }
strum = { version = "0.26.3", features = ["derive"] }
structstruck = "0.4.1"
derive-new = "0.7.0"
struct-field-names-as-array = "0.3.0"
json_dotpath = "1.1.0"
country-emoji = "0.2.0"
chrono-humanize = "0.2.3"
notify = "8.0.0"
croner = "3.0.1"
tokio-util = "0.7.15"
similar = "2.7.0"
pathdiff = "0.2.3"
pastey = "0.1.1"
derive_more = { version = "2.1.1", features = ["display"] }
nix = { version = "0.30.1", features = ["signal"] }
fs2 = "0.4.3"
async-trait = "0.1.89"
ratatui = "0.29"
scopeguard = "1.2"
schemars = "0.8"
rmcp = { version = "0.16", features = ["transport-io"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = "fat"
opt-level = "z"
panic = "abort"

[dev-dependencies]
tempfile = "3.23.0"
